# mydex-deep-ai

./: .gitignore  .lgdev_assistant_id  AGENTS.md  README.md  README_TOOL.md  langgraph.json  lgdev.sh  main.py  pyproject.toml
play/: cli_privy.py  cli_search_token.py  cli_wallet.py  hello.py  hello_intent.py  hello_state.py  hello_stream.py  hello_tools_skills.py  stream_schema.py
play/AI+合约文档/: Feature_HyperliquidAIAgentIntent.zh-CN.md  hyperliquid-ai-agent-integration.md  hyperliquid-info-api-direct.md
play/research/: implementation_plan.md  参考lite-chatbot重构文档.md
play/skills/get-secret/: SKILL.md
play/skills/get-weather/: SKILL.md  weather_tool.py
src/agent/: fastapi_server.py  run.py
src/config/: __init__.py  agent_backend.py  agent_context.py  agent_llms.py  agent_prompts.py  agent_tools.py  backend.py  context.py  prompts.py  tools.py
src/middleware/: __init__.py  dynamic_tools.py
src/play/: hello.py
src/services/alchemy/: __init__.py  cli.py  client.py  network.py  service.py  solana.py
src/services/coingecko/: __init__.py  __main__.py  cli.py  client.py  normalize.py  service.py
src/services/hyperliquid/: __init__.py  cli.py  cli_main.py  client.py  info.py  normalize.py  service.py
src/services/postgresql/: __init__.py  client.py  service.py
src/services/privy/: __init__.py  cli.py  client.py  service.py
src/skills/get-secret/: SKILL.md
src/skills/perp-open-sop/: SKILL.md
src/skills/perp-trader/: SKILL.md
src/tests/agent/: test_context.py  test_fastapi.py  test_tools_config.py
src/tests/agent_test/: test_context.py  (+1 more)
(+91 files in other folders)
